Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-106029

Crash during device discovery in Qt RO bleclient example

    XMLWordPrintable

Details

    • Windows
    • e284887e0f (qt/qtconnectivity/dev) e284887e0f (qt/tqtc-qtconnectivity/dev) 06b3f5a133 (qt/qtconnectivity/6.3) df481605c1 (qt/qtconnectivity/6.3.2) 2e8c556cac (qt/qtconnectivity/6.4) 06b3f5a133 (qt/tqtc-qtconnectivity/6.3)
    • Foundation Sprint 64

    Description

      When running Qt Remote Objects bleclient example I sometimes see a crash when doing device discovery.

      Steps to reproduce:

      • Start scanning
      • Select a device from the list while scanning is still in progress. This normally stops scanning, but sometimes leads to a crash.

      Backtrace of the main thread:

      1  winrt::impl::consume_Windows_Devices_Enumeration_IDeviceWatcher<winrt::Windows::Devices::Enumeration::IDeviceWatcher>::Status windows.devices.enumeration.h            646  0x7ff931461c57 
      2  QBluetoothDeviceWatcherWinRT::canStop                                                                                         qbluetoothdevicewatcher_winrt.cpp        103  0x7ff93145a7ab 
      3  QBluetoothDeviceWatcherWinRT::stop                                                                                            qbluetoothdevicewatcher_winrt.cpp        60   0x7ff93145a38c 
      4  QWinRTBluetoothDeviceDiscoveryWorker::stop                                                                                    qbluetoothdevicediscoveryagent_winrt.cpp 360  0x7ff931368b84 
      5  QWinRTBluetoothDeviceDiscoveryWorker::finishDiscovery                                                                         qbluetoothdevicediscoveryagent_winrt.cpp 367  0x7ff931369f94 
      6  QWinRTBluetoothDeviceDiscoveryWorker::decrementPendingDevicesCountAndCheckFinished                                            qbluetoothdevicediscoveryagent_winrt.cpp 612  0x7ff93136c0c7 
      7  QWinRTBluetoothDeviceDiscoveryWorker::qt_static_metacall                                                                      qbluetoothdevicediscoveryagent_winrt.moc 466  0x7ff931367d2c 
      8  QMetaCallEvent::placeMetaCall                                                                                                 qobject.cpp                              611  0x7ff92fb6b766 
      9  QObject::event                                                                                                                qobject.cpp                              1378 0x7ff92fb61bf6 
      10 QApplicationPrivate::notify_helper                                                                                            qapplication.cpp                         3305 0x7ff9316df26b 
      11 QApplication::notify                                                                                                          qapplication.cpp                         3256 0x7ff9316dc4fa 
      12 QCoreApplication::notifyInternal2                                                                                             qcoreapplication.cpp                     1026 0x7ff92faa5857 
      13 QCoreApplication::sendEvent                                                                                                   qcoreapplication.cpp                     1443 0x7ff92faa2eeb 
      14 QCoreApplicationPrivate::sendPostedEvents                                                                                     qcoreapplication.cpp                     1804 0x7ff92faa7bb2 
      15 QEventDispatcherWin32::sendPostedEvents                                                                                       qeventdispatcher_win.cpp                 894  0x7ff92febe77f 
      16 QWindowsGuiEventDispatcher::sendPostedEvents                                                                                  qwindowsguieventdispatcher.cpp           44   0x7ff92ecf59c5 
      17 QEventDispatcherWin32::processEvents                                                                                          qeventdispatcher_win.cpp                 464  0x7ff92febca7f 
      18 QWindowsGuiEventDispatcher::processEvents                                                                                     qwindowsguieventdispatcher.cpp           36   0x7ff92ecf597b 
      19 QEventLoop::processEvents                                                                                                     qeventloop.cpp                           101  0x7ff92fac6e6c 
      20 QEventLoop::exec                                                                                                              qeventloop.cpp                           182  0x7ff92fac7154 
      21 QCoreApplication::exec                                                                                                        qcoreapplication.cpp                     1347 0x7ff92faa2c8a 
      22 QGuiApplication::exec                                                                                                         qguiapplication.cpp                      1861 0x7ff92e59f60a 
      23 QApplication::exec                                                                                                            qapplication.cpp                         2587 0x7ff9316d923c 
      24 main                                                                                                                          main.cpp                                 30   0x7ff6bfb0379e 
      25 WinMain                                                                                                                       qtentrypoint_win.cpp                     50   0x7ff6bfb09732 
      26 invoke_main                                                                                                                   exe_common.inl                           107  0x7ff6bfb06392 
      27 __scrt_common_main_seh                                                                                                        exe_common.inl                           288  0x7ff6bfb0627e 
      28 __scrt_common_main                                                                                                            exe_common.inl                           331  0x7ff6bfb0613e 
      29 WinMainCRTStartup                                                                                                             exe_winmain.cpp                          17   0x7ff6bfb0642e 
      30 BaseThreadInitThunk                                                                                                           KERNEL32                                      0x7ff9740f54e0 
      31 RtlUserThreadStart                                                                                                            ntdll                                         0x7ff974fa485b 

      Full backtrace attached.

      Attachments

        For Gerrit Dashboard: QTBUG-106029
        # Subject Branch Project Status CR V

        Activity

          People

            ivan.solovev Ivan Solovev
            ivan.solovev Ivan Solovev
            Vladimir Minenko Vladimir Minenko
            Alex Blasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes