Windows device discovery: fix crash at discovery stop

The crash is cannot be reproduced reliably.
One of the possible scenarios is:
* After finishing the scanning a last
  QWinRTBluetoothDeviceDiscoveryWorker::onAdvertisementDataReceived()
  slot is executed on worker's thread (thread A).
* This slot starts an async BluetoothLEDevice::FromBluetoothAddressAsync()
  call, capturing shared_from_this() to make sure that the worker object
  is alive when the async call completes. The async call executes on
  some other thread B.
* The async call completes on thread B with a failure (that happens with
  some LE devices), so we call
  invokeDecrementPendingDevicesCountAndCheckFinished(). This call
  schedules a decrementPendingDevicesCountAndCheckFinished() function
  call on thread A.
* The lambda in thread B is completed, so shared pointer's counter is
  decremented. It is the last instance of the worker, so its destructor
  is called.
* At the same time the decrementPendingDevicesCountAndCheckFinished()
  function is called on thread A.
* It refers to an already deleted worker -> crash.

This patch fixes it by passing the shared worker instance to the
decrementPendingDevicesCountAndCheckFinished() function, making sure
that the worker object is alive when this function is invoked.

As a drive-by: get rid of the {invoke}IncrementPendingDevicesCount()
functions, because we always increment the device count from the
worker thread, so we can update the variable directly.

This commit amends 2f560d044fec92e94e8438791aa5e4d9daced197 and
36dd802c964f97522d1f5a75c8fb7a67f3061a3d.

Fixes: QTBUG-106029
Change-Id: I2d82c34b17c8cef873c9c61a92d874c377501edb
Reviewed-by: Alex Blasche <alexander.blasche@qt.io>
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Oliver Wolff <oliver.wolff@qt.io>
Reviewed-by: Juha Vuolle <juha.vuolle@insta.fi>
(cherry picked from commit e284887e0f6093767a5af16d497549860ca1770d)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>